controller: update API spec
